--- a/src/assets/elements.css
+++ b/src/assets/elements.css
@@ -1,4 +1,4 @@
-.elementContainer{
+#elementContainer{
     background-color: rgb(63, 63, 63);
     width: 100%;
     height: 100%;
@@ -36,11 +36,11 @@
 }
 
 #genPw{
-    width: 90%;
     text-align: end;
     text-decoration: underline;
     color: green;
     margin: 0;
+    position: absolute; right: 0;
 }
 
 
@@ -62,5 +62,29 @@
     outline: none;
     height: 30px;
     position: absolute;
-    bottom: 15px;
+    bottom: 20px;
+}
+
+.warningText{
+margin: 0;
+
+}
+
+.elementLowerTextWrapper{
+    display: flex;
+    margin-left: 15%;
+    width: 70%;
+    position: relative;
+    padding-top: 6px;
+    height: 18px;
+    max-height: fit-content;
+}
+
+.redWarningText{
+    color: red;
+}
+
+.largebtn{
+    width: 80%;
+    left: 10%;
 }
