--- a/src/assets/elements.css
+++ b/src/assets/elements.css
@@ -88,3 +88,28 @@ margin: 0;
     width: 80%;
     left: 10%;
 }
+
+/* Notes */
+
+#NoteField{
+    padding: 20px;
+    width: 60%;
+    min-height: 120px;
+    height: 120px;
+    margin-left: 50%;
+    transform: translateX(-50%);
+    border: 1px solid white;
+    border-radius: 12px;
+}
+
+#noteTextNotes{
+    border: none;
+    outline: none;
+    width: 100%;
+    height: 100%;
+    background-color: transparent;
+    resize: none;
+    text-align: center;
+    margin-bottom: 15px;
+    color: white;
+}
