--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -9,6 +9,10 @@ body{
     cursor: pointer;
 }
 
+.pointerCursor:hover{
+    cursor: pointer;
+}
+
 .unselectable {
     -webkit-touch-callout: none;
     -webkit-user-select: none;
