--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -30,3 +30,17 @@ body{
     -ms-user-select: none;
     user-select: none;
 }
+
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+-webkit-appearance: none;
+margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+    appearance: none;
+    -moz-appearance: textfield;
+}
