--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,8 +1,15 @@
+html {
+    scrollbar-color: #6969dd #e0e0e0;
+    scrollbar-width: thin;
+  }
+  
+
 body{
     display: block;
     background-image: url("wp.png");
     color: white;
     margin: 0;
+    overflow: hidden;
 }
 
 * button:hover {
